Create user claim extractor
