# docs/api.swagger.yaml
@@ -25,7 +25,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/User'
+              $ref: "#/components/schemas/User"
       responses:
         default:
           description: Success
@@ -37,7 +37,7 @@ paths:
                   username:
                     type: string
                     example: krtek
-        409:
+        "409":
           description: User already exists
           content:
             application/json:
@@ -47,6 +47,30 @@ paths:
                   error:
                     type: string
                     example: user 'krtek' already exists
+    get:
+      tags:
+        - user
+      summary: Get current logged in user
+      operationId: get_current_user
+      security:
+        - bearerAuth: []
+      responses:
+        default:
+          description: Success
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  user:
+                    type: object
+                    properties:
+                      username:
+                        type: string
+                        example: krtek
+        "401":
+          description: User is not logged in
+
   /user/login:
     post:
       tags:
@@ -54,12 +78,12 @@ paths:
       summary: Log user into the system
       operationId: login_user
       requestBody:
-        content: 
+        content:
           application/json:
             schema:
-              $ref: '#/components/schemas/User'
+              $ref: "#/components/schemas/User"
       responses:
-        '200':
+        "200":
           description: Success
           headers:
             X-Rate-Limit:
@@ -76,7 +100,7 @@ paths:
             application/json:
               schema:
                 type: string
-        '401':
+        "401":
           description: Invalid username/password supplied
   /user/logout:
     post:
@@ -87,9 +111,9 @@ paths:
       security:
         - bearerAuth: []
       responses:
-        '200':
+        "200":
           description: Success
-        '401':
+        "401":
           description: Invalid bearer token
   /checklists:
     get:
@@ -100,7 +124,7 @@ paths:
       security:
         - bearerAuth: []
       responses:
-        '200':
+        "200":
           description: Success
           content:
             application/json:
@@ -109,12 +133,12 @@ paths:
                 items:
                   type: object
                   properties:
-                    id: 
+                    id:
                       type: string
                     title:
                       type: string
     post:
-      tags: 
+      tags:
         - checklists
       summary: Create new checklist
       operationId: create_checklist
@@ -125,14 +149,14 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/CheckList'
-      responses: 
+              $ref: "#/components/schemas/CheckList"
+      responses:
         default:
           description: Success
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/CheckList'
+                $ref: "#/components/schemas/CheckList"
   /checklists/{id}:
     get:
       tags:
@@ -142,13 +166,13 @@ paths:
       security:
         - bearerAuth: []
       responses:
-        '200':
+        "200":
           description: Success
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/CheckList'
-        '400':
+                $ref: "#/components/schemas/CheckList"
+        "400":
           description: Invalid id
   /checklists/{id}/execute:
     post:
@@ -159,7 +183,7 @@ paths:
       security:
         - bearerAuth: []
       responses:
-        '200':
+        "200":
           description: Success
           content:
             application/json:
@@ -178,7 +202,7 @@ paths:
       security:
         - bearerAuth: []
       responses:
-        '200':
+        "200":
           description: Success
           content:
             application/json:
@@ -187,7 +211,7 @@ paths:
                 items:
                   type: object
                   properties:
-                    id: 
+                    id:
                       type: string
                     title:
                       type: string
@@ -200,13 +224,13 @@ paths:
       security:
         - bearerAuth: []
       responses:
-        '200':
+        "200":
           description: Success
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Execution'
-        '400':
+                $ref: "#/components/schemas/Execution"
+        "400":
           description: Invalid id
   /executions/{id}/state:
     put:
@@ -221,15 +245,15 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/State'
+              $ref: "#/components/schemas/State"
       responses:
-        '200':
+        "200":
           description: success
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Execution'
-        '400':
+                $ref: "#/components/schemas/Execution"
+        "400":
           description: Invalid id
   /executions/{id}/tasks/{index}/state:
     put:
@@ -244,15 +268,15 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/State'
+              $ref: "#/components/schemas/State"
       responses:
-        '200':
+        "200":
           description: success
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/TaskStatus'
-        '400':
+                $ref: "#/components/schemas/TaskStatus"
+        "400":
           description: Invalid id
 components:
   schemas:
@@ -264,7 +288,7 @@ components:
           example: krtek
         password:
           type: string
-          example: '12345'
+          example: "12345"
     Task:
       type: object
       required:
@@ -275,8 +299,8 @@ components:
           type: string
         state:
           type: string
-          enum: 
-            - not_started 
+          enum:
+            - not_started
             - done
     CheckList:
       type: object
@@ -293,7 +317,7 @@ components:
         tasks:
           type: array
           items:
-            $ref: '#/components/schemas/Task'
+            $ref: "#/components/schemas/Task"
         owner:
           type: string
           example: jozin
@@ -303,7 +327,7 @@ components:
         - state
       properties:
         state:
-          $ref: '#/components/schemas/State'
+          $ref: "#/components/schemas/State"
     Execution:
       type: object
       required:
@@ -322,15 +346,15 @@ components:
         task_statuses:
           type: array
           items:
-            $ref: '#/components/schemas/TaskStatus'
+            $ref: "#/components/schemas/TaskStatus"
         state:
-          $ref: '#/components/schemas/State'
+          $ref: "#/components/schemas/State"
     State:
       type: string
-      enum: 
+      enum:
         - not_started
         - done
   securitySchemes:
-    bearerAuth:            
+    bearerAuth:
       type: http
       scheme: bearer
