# src/webapi/src/models/user.rs
@@ -1,0 +1,4 @@
+#[derive(Debug, serde::Serialize, serde::Deserialize)]
+pub struct UserProfile {
+    pub username: String,
+}
